fix product image rendering/cropping (#727)

--- a/src/Foundation/Features/CatalogContent/_product-detail.scss
+++ b/src/Foundation/Features/CatalogContent/_product-detail.scss
@@ -16,7 +16,7 @@
                     width: 65px;
                     height: 100px;
                     border: 1px solid #eee;
-                    object-fit: cover;
+                    object-fit: contain;
                 }
             }
         }
